* New ES6 promise-based project structure with karma, yarn, webpack, babel, eslint. * Refactored POC version with component and registry definitions. No jquery dependencies. * Tinybind used instead of rivets, included and bundled via yarn.

--- a/demo.html
+++ b/demo.html
@@ -5,32 +5,20 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
 		<meta name="viewport" content="width=device-width, initial-scale=1"></meta>
 
-		<title>{business.name} - Homepage</title>
-
-		<link href="./vendor/css/bricks-1.0.css" 		rel="stylesheet">
-		<link href="./vendor/css/atlas.css" 			rel="stylesheet">
-		<link href='./vendor/css/google-fonts.css' 		rel='stylesheet'>
-		<link href="./vendor/css/hamburgers.min.css"	rel="stylesheet">
-		<link href="./demo.css" 						rel="stylesheet">
+		<title>Homepage</title>
 
 	</head>
-	<main>
+	<body>
 		<header>
 			<nav-basic data-id="main-nav" data-brand-name="Test Brand" data-toggle-type="vortex" data-sections="pageData.sections"></nav-basic>
 		</header>
+		<main>
+			<p>Some content Xzy</p>
 
-		<p>Some content Xzy</p>
-
-		<script src="./vendor/js/jquery-3.4.1.min.js"></script>
-		<script src="./vendor/js/rivets.js"></script>
-		<script src="./lib/muta.js"></script>
-
-		<script src="./vendor/js/bricks/micromodal.min.js"></script>
-		<script src="./vendor/js/bricks/bricks-1.0.js"></script>
-		<script src="./demo.js"></script>
-
-		<script src="./vendor/js/atlas/atlas-default-stylemap.js"></script>
-		<script src="./vendor/js/atlas/atlas-default-data.js"></script>
-		<script src="./vendor/js/atlas/atlas.js"></script>
-	</main>
+			<script>window.pageData = { "sections": [	{ id: "one", 	name: "One" 	}, 
+														{ id: "two", 	name: "Two" 	}, 
+														{ id: "three", 	name: "Three" 	}]};</script>
+			<script src="./lib/lib.js"></script>
+		</main>
+	</body>
 </html>
