* Registry URL is passed in the pageData object * Pre-existing non-data attributes on the component are transferred to the new root * Component template css Data is also injected in a <script> tag.

--- a/_Elements/nav-basic/template.html
+++ b/_Elements/nav-basic/template.html
@@ -1,11 +1,11 @@
 <nav>
-	<div id="nav-logo">
+	<div class="navbar-logo">
 		<a class="navbar-brand atl-txt-hl atl-font-header" href="#">
 			{ brand-name }
 		</a>				
 	</div>
-	<button id="nav-toggle" type="button"></button>
-	<ul id="nav-links" class="animate">
+	<button class="navbar-toggle" type="button"></button>
+	<ul class="navbar-links animate">
 		<li rv-each-section="sections">
 			<a rv-href="section.id | hrefId" class="atl-txt-inv">{ section.name }</a>
 		</li>
